[gd_scene load_steps=13 format=3 uid="uid://cv2rpiirlmx7h"]

[ext_resource type="Script" path="res://phase1.gd" id="1_82mw4"]
[ext_resource type="Script" path="res://display.gd" id="1_csdrw"]
[ext_resource type="Script" path="res://bg_Image.gd" id="2_5cga6"]
[ext_resource type="Script" path="res://phase2.gd" id="3_r75fe"]
[ext_resource type="Script" path="res://pieces.gd" id="4_2wdrx"]
[ext_resource type="PackedScene" uid="uid://byots7fskmlof" path="res://bureau.tscn" id="4_8pbob"]
[ext_resource type="PackedScene" uid="uid://cxeirmfa53aa2" path="res://bibliotheque.tscn" id="5_tmu0e"]
[ext_resource type="PackedScene" uid="uid://bapfxoo172r78" path="res://feu.tscn" id="6_ysp68"]
[ext_resource type="PackedScene" uid="uid://vyxcceae0fny" path="res://etienne.tscn" id="7_u6jjd"]
[ext_resource type="PackedScene" uid="uid://cv8v0vsrurle3" path="res://decryptage.tscn" id="10_vwvk0"]
[ext_resource type="PackedScene" uid="uid://djprl3x68usct" path="res://second_decode.tscn" id="11_tj1m3"]

[sub_resource type="ImageTexture" id="ImageTexture_pqgao"]

[node name="display" type="Node2D"]
script = ExtResource("1_csdrw")

[node name="phase1" type="Node2D" parent="."]
script = ExtResource("1_82mw4")

[node name="small_Z" type="Label" parent="phase1"]
offset_left = 727.0
offset_top = 107.0
offset_right = 1905.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 40
text = "Z"

[node name="big_Z" type="Label" parent="phase1"]
offset_left = 152.0
offset_top = 378.0
offset_right = 244.0
offset_bottom = 543.0
theme_override_font_sizes/font_size = 120
text = "Z"

[node name="middle_Z" type="Label" parent="phase1"]
offset_left = 392.0
offset_top = 255.0
offset_right = 484.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 80
text = "Z
"

[node name="bg_Image" type="TextureRect" parent="."]
offset_left = -6.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 651.0
texture = SubResource("ImageTexture_pqgao")
script = ExtResource("2_5cga6")

[node name="phase2" type="Node2D" parent="."]
script = ExtResource("3_r75fe")

[node name="choix1" type="Button" parent="phase2"]
offset_left = 275.0
offset_top = 143.0
offset_right = 910.0
offset_bottom = 228.0

[node name="Label" type="Label" parent="phase2/choix1"]
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 628.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="choix2" type="Button" parent="phase2"]
offset_left = 274.0
offset_top = 241.0
offset_right = 913.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 20
text = "Sur les motifs qui se répètent dans les textes"

[node name="choix3" type="Button" parent="phase2"]
offset_left = 275.0
offset_top = 321.0
offset_right = 911.0
offset_bottom = 386.0
theme_override_font_sizes/font_size = 20
text = "Sur rien, désolé..."

[node name="choix4" type="Button" parent="phase2"]
offset_left = 361.0
offset_top = 397.0
offset_right = 811.0
offset_bottom = 460.0
theme_override_font_sizes/font_size = 20
text = "Fouiller"

[node name="pieces" type="Node2D" parent="."]
script = ExtResource("4_2wdrx")

[node name="bureau" parent="pieces" instance=ExtResource("4_8pbob")]

[node name="Bibliotheque" parent="pieces" instance=ExtResource("5_tmu0e")]

[node name="feu" parent="pieces" instance=ExtResource("6_ysp68")]

[node name="Etienne" parent="pieces" instance=ExtResource("7_u6jjd")]

[node name="decryptage" parent="." instance=ExtResource("10_vwvk0")]

[node name="second_decode" parent="." instance=ExtResource("11_tj1m3")]

[connection signal="fin_phase2" from="phase2" to="." method="_on_phase_2_fin_phase_2"]
[connection signal="fouille_piece" from="phase2" to="pieces" method="_on_phase_2_fouille_piece"]
[connection signal="pressed" from="phase2/choix1" to="phase2" method="response1"]
[connection signal="pressed" from="phase2/choix2" to="phase2" method="response2"]
[connection signal="pressed" from="phase2/choix3" to="phase2" method="response3"]
[connection signal="pressed" from="phase2/choix4" to="phase2" method="fouille"]
[connection signal="droite_bureau" from="pieces/bureau" to="pieces" method="_on_bureau_droite_bureau"]
[connection signal="gauche_bureau" from="pieces/bureau" to="pieces" method="_on_bureau_gauche_bureau"]
[connection signal="poignard" from="pieces/bureau" to="pieces" method="_on_bureau_poignard"]
[connection signal="retour_quest" from="pieces/bureau" to="pieces" method="_on_bureau_retour_quest"]
[connection signal="droite_bibli" from="pieces/Bibliotheque" to="pieces" method="_on_bibliotheque_droite_bibli"]
[connection signal="fin" from="pieces/Bibliotheque" to="." method="_on_bibliotheque_fin"]
[connection signal="finished_step" from="pieces/Bibliotheque" to="pieces" method="_on_bibliotheque_finished_step"]
[connection signal="gauche_bibli" from="pieces/Bibliotheque" to="pieces" method="_on_bibliotheque_gauche_bibli"]
[connection signal="droite_feu" from="pieces/feu" to="pieces" method="_on_feu_droite_feu"]
[connection signal="finished_pieces" from="pieces/feu" to="." method="_on_feu_finished_pieces"]
[connection signal="gauche_feu" from="pieces/feu" to="pieces" method="_on_feu_gauche_feu"]
[connection signal="droite_etienne" from="pieces/Etienne" to="pieces" method="_on_etienne_droite_etienne"]
[connection signal="etienne_done" from="pieces/Etienne" to="pieces" method="_on_etienne_etienne_done"]
[connection signal="gauche_etienne" from="pieces/Etienne" to="pieces" method="_on_etienne_gauche_etienne"]
[connection signal="finish_decrypt" from="decryptage" to="." method="_on_decryptage_finish_decrypt"]
